[gd_scene load_steps=5 format=3 uid="uid://tdrxeio1s1t2"]

[ext_resource type="Texture2D" uid="uid://b2eftip5kqblb" path="res://icon.svg" id="1_2yinb"]
[ext_resource type="Script" path="res://player/explosive/explosive.gd" id="1_feu6q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s4ejm"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lkmev"]
radius = 16.0

[node name="Explosive" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
mass = 500.0
gravity_scale = 1.1
script = ExtResource("1_feu6q")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_2yinb")

[node name="FuseTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s4ejm")

[node name="tilemap_detector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="tilemap_detector"]
shape = SubResource("CircleShape2D_lkmev")

[connection signal="timeout" from="FuseTimer" to="." method="_on_fuse_timer_timeout"]
